Replacing cURL with Guzzle (https://github.com/guzzle/guzzle).

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,10 @@
 
 # Ignore the SimpleTest library
 /test/simpletest/
+
+# Ignore IntelliJ project files
+/.idea/
+
+# Ignore Composer artifacts
+/composer.phar
+/vendor/
