--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "require" : {
         "php": ">=5.6.0",
         "ext-curl": "*",
-        "guzzlehttp/guzzle": "^6.5"
+        "guzzlehttp/guzzle": ">=6.5"
     },
     "scripts": {
         "test": "php -S localhost:8080 -t test/"
