--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,6 @@
     },
     "require-dev": {
         "simpletest/simpletest": "^1.1",
-        "phpunit/phpunit": "^10.3"
+        "phpunit/phpunit": "^7.0.0|^8.0.0|^9.0.0|^10.3"
     }
 }
