--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     "require" : {
         "php": ">=5.6.0",
         "ext-curl": "*",
-        "guzzlehttp/guzzle": ">=6.5"
+        "guzzlehttp/guzzle": ">=6.5",
+        "psr/http-client": "^1.0"
     },
     "scripts": {
         "test": "php -S localhost:8080 -t test/"
@@ -22,6 +23,7 @@
         }
     },
     "require-dev": {
-        "simpletest/simpletest": "^1.1"
+        "simpletest/simpletest": "^1.1",
+        "phpunit/phpunit": "^7.0.0|^8.0.0|^9.0.0|^10.3"
     }
 }
